--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="basket">
                 <button class="basket__btn">
                     Корзина
-                    <spon class="basket__total">4</span>
+                    <span class="basket__total">4</span>
                 </button>
                 <!-- Модальное окно корзины -->
                 <div class="basket-modal">
@@ -385,11 +385,11 @@
             </div>
         </div>
     </div>
-        
+    <script src="./js/basket-modal.js"></script>
+    <script src="./js/delivery-modal.js"></script>
+    <script src="./js/burger-modal.js"></script>
+    <script src="./js/categories-menu.js"></script>
+    
 </body>
-<script src="./js/basket-modal.js"></script>
-<script src="./js/delivery-modal.js"></script>
-<script src="./js/burger-modal.js"></script>
-<script src="./js/categories-menu.js"></script>
 
 </html>
