--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                     <img src="./images/noodles-menu.png" alt="">
                     <p class="categories__menu-text">Вок</p>
                 </li>
+                <li class="categories__menu">
+                    <img src="./images/donut-menu.png" alt="">
+                    <p class="categories__menu-text">Десерти</p>
+                </li>
+                <li class="categories__menu">
+                    <img src="./images/souce-menu.png" alt="">
+                    <p class="categories__menu-text">Соуси</p>
+                </li>
             </ul>
         </section> 
         <section class="food">
@@ -251,14 +259,14 @@
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__container-box">
-                <div class="footer__logo">
+                <a href="" class="footer__logo">
                     <svg class="footer__logo-icon logo-footer-name" width="150px" height="24px" aria-hidden="true">
                         <use href="./images/icons.svg#icon-yourmeal"></use>
                     </svg>
                     <svg class="footer__logo-icon logo-footer" width="38px" height="36px" aria-hidden="true">
                         <use href="./images/icons.svg#icon-logo-footer"></use>
                     </svg>
-                </div>
+                </a>
                 <div class="footer__contact-box">
                     <div class="footer__contact">
                         <p class="footer__contact-text">Номер для заказу</p>
