--- a/index.html
+++ b/index.html
@@ -149,106 +149,106 @@
             <div class="food__container-burger">
                 <h2 class="food__title">Бургери</h2>
                 <ul class="food__burger-list">
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-bomba.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">350₴</p>
-                        <p class="food__burger-name">М'ясна бомба</p>
-                        <p class="food__burger-weight">512г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-bomba.png" width="137px" height="120px" alt="">
+                        <p class="food__price">350₴</p>
+                        <p class="food__name">М'ясна бомба</p>
+                        <p class="food__weight">512г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-italian.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">300₴</p>
-                        <p class="food__burger-name">Італьянський</p>
-                        <p class="food__burger-weight">480г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-italian.png" width="137px" height="120px" alt="">
+                        <p class="food__price">300₴</p>
+                        <p class="food__name">Італьянський</p>
+                        <p class="food__weight">480г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-super.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">280₴</p>
-                        <p class="food__burger-name">Ситний</p>
-                        <p class="food__burger-weight">580г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-super.png" width="137px" height="120px" alt="">
+                        <p class="food__price">280₴</p>
+                        <p class="food__name">Ситний</p>
+                        <p class="food__weight">580г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-cheese.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">320₴</p>
-                        <p class="food__burger-name">Супер Сирний</p>
-                        <p class="food__burger-weight">510г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-cheese.png" width="137px" height="120px" alt="">
+                        <p class="food__price">320₴</p>
+                        <p class="food__name">Супер Сирний</p>
+                        <p class="food__weight">510г</p>
+                        <button class="food__addbtn" >Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-italian.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">300₴</p>
-                        <p class="food__burger-name">Італьянський</p>
-                        <p class="food__burger-weight">480г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-italian.png" width="137px" height="120px" alt="">
+                        <p class="food__price">300₴</p>
+                        <p class="food__name">Італьянський</p>
+                        <p class="food__weight">480г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-super.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">280₴</p>
-                        <p class="food__burger-name">Ситний</p>
-                        <p class="food__burger-weight">580г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-super.png" width="137px" height="120px" alt="">
+                        <p class="food__price">280₴</p>
+                        <p class="food__name">Ситний</p>
+                        <p class="food__weight">580г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__burger-item">
-                        <img class="food__burger-img" src="./images/burger-cheese.png" width="137px" height="120px" alt="">
-                        <p class="food__burger-price">320₴</p>
-                        <p class="food__burger-name">Супер Сирний</p>
-                        <p class="food__burger-weight">510г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/burger-cheese.png" width="137px" height="120px" alt="">
+                        <p class="food__price">320₴</p>
+                        <p class="food__name">Супер Сирний</p>
+                        <p class="food__weight">510г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
                 </ul>
             </div>
             <div class="food__container-snacks hidden">
                 <h2 class="food__title">Закуски</h2>
                 <ul class="food__snacks-list">
-                    <li class="food__snacks-item">
-                        <img class="food__snacks-img" src="./images/nachos.png" width="137px" height="120px" alt="">
-                        <p class="food__snacks-price">150₴</p>
-                        <p class="food__snacks-name">Начос</p>
-                        <p class="food__snacks-weight">220г</p>
-                        <button class="food__snacks-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/nachos.png" width="137px" height="120px" alt="">
+                        <p class="food__price">150₴</p>
+                        <p class="food__name">Начос</p>
+                        <p class="food__weight">220г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__snacks-item">
-                        <img class="food__snacks-img" src="./images/potato-fries.png" width="137px" height="120px" alt="">
-                        <p class="food__snacks-price">130₴</p>
-                        <p class="food__snacks-name">Картопля фрі</p>
-                        <p class="food__snacks-weight">180г</p>
-                        <button class="food__snacks-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/potato-fries.png" width="137px" height="120px" alt="">
+                        <p class="food__price">130₴</p>
+                        <p class="food__name">Картопля фрі</p>
+                        <p class="food__weight">180г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__snacks-item">
-                        <img class="food__snacks-img" src="./images/onion-rings.png" width="137px" height="120px" alt="">
-                        <p class="food__snacks-price">120₴</p>
-                        <p class="food__snacks-name">Цибуляні нільця</p>
-                        <p class="food__snacks-weight">160г</p>
-                        <button class="food__burger-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/onion-rings.png" width="137px" height="120px" alt="">
+                        <p class="food__price">120₴</p>
+                        <p class="food__name">Цибуляні нільця</p>
+                        <p class="food__weight">160г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>                    
                 </ul>
             </div>
             <div class="food__container-hotdog hidden">
                 <h2 class="food__title">Закуски</h2>
                 <ul class="food__hotdog-list">
-                    <li class="food__hotdog-item">
-                        <img class="food__hotdog-img" src="./images/home-hotdog.png" width="137px" height="120px" alt="">
-                        <p class="food__hotdog-price">160₴</p>
-                        <p class="food__hotdog-name">Домашній хот-дог</p>
-                        <p class="food__hotdog-weight">250г</p>
-                        <button class="food__hotdog-addbtn">Додати</button>
+                    <li class="item">
+                        <img class="food__img" src="./images/home-hotdog.png" width="137px" height="120px" alt="">
+                        <p class="food__price">160₴</p>
+                        <p class="food__name">Домашній хот-дог</p>
+                        <p class="food__weight">250г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__hotdog-item">
-                        <img class="food__hotdog-img" src="./images/spicy-hotdog.png" width="137px" height="120px" alt="">
-                        <p class="food__hotdog-price">120₴</p>
-                        <p class="food__hotdog-name">Гострий хот-дог</p>
-                        <p class="food__hotdog-weight">245г</p>
-                        <button class="food__hotdog-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/spicy-hotdog.png" width="137px" height="120px" alt="">
+                        <p class="food__price">120₴</p>
+                        <p class="food__name">Гострий хот-дог</p>
+                        <p class="food__weight">245г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>
-                    <li class="food__hotdog-item">
-                        <img class="food__hotdog-img" src="./images/classik-hotdog.png" width="137px" height="120px" alt="">
-                        <p class="food__hotdog-price">110₴</p>
-                        <p class="food__hotdog-name">КЛасичний хот-дог</p>
-                        <p class="food__hotdog-weight">215г</p>
-                        <button class="food__hotdog-addbtn">Додати</button>
+                    <li class="food__item">
+                        <img class="food__img" src="./images/classik-hotdog.png" width="137px" height="120px" alt="">
+                        <p class="food__price">110₴</p>
+                        <p class="food__name">Класичний хот-дог</p>
+                        <p class="food__weight">215г</p>
+                        <button class="food__addbtn">Додати</button>
                     </li>                    
                 </ul>
             </div>
